@@ -1,6 +1,14 @@
 # ChangeLog for Portage; the Gentoo Linux ports system 
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 
+*portage-1.8.10 (01 Apr 2002)
+
+  1 Apr 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: In trying to fix
+  the glibc merge bug, we rewrote movefile() and it now runs blazingly fast.  I
+  also tweaked the code to remove the need for an ">>> Updating mtimes..."
+  stage.  This is all done dynamically now.  *Much* faster.  And hopefully
+  solid for glibc upgraders.
+
 *portage-1.8.9.4 (01 Apr 2002)
 
   31 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: adapted
